Fix bank card icon alignment.

--- a/site/static/en/css/cc-logos.css
+++ b/site/static/en/css/cc-logos.css
@@ -111,9 +111,9 @@
   display: inline-block;
   width: 47px;
   height: 30px;
-  line-height: 32px;
+  line-height: 30px;
   vertical-align: text-top;
   background-image: url("../img/cc-logos.png");
   background-repeat: no-repeat;
-  background-position: -259px -193px;
+  background-position: -261px -215px;
 }
